# ticker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: db.py  llm.py  main.py  schema.sql
backend/app/market_data/: __init__.py  base.py  cache.py  massive.py  simulator.py
backend/app/routes/: chat.py  portfolio.py  stream.py  watchlist.py
backend/tests/api/: conftest.py  test_api.py  test_chat.py
backend/tests/db/: test_db.py
backend/tests/market_data/: test_base.py  test_cache.py  test_factory.py  test_interface_conformance.py  test_massive.py  test_simulator.py
frontend/: package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.test.tsx  ChatPanel.tsx  Header.tsx  Heatmap.tsx  MainChart.tsx  Panel.tsx  PnLChart.tsx  PositionsTable.test.tsx  PositionsTable.tsx  PriceCell.test.tsx  PriceCell.tsx  Sparkline.tsx  StatusDot.tsx  TradeBar.test.tsx  TradeBar.tsx  Watchlist.test.tsx  Watchlist.tsx
frontend/lib/: api.ts  format.ts  portfolio.test.ts  portfolio.ts  store.tsx  types.ts  usePriceStream.test.ts  usePriceStream.ts
frontend/test/: appState.ts
planning/: MARKET_DATA_DESIGN.md  PLAN.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: README.md  docker-compose.test.yml  global-setup.ts  package.json  playwright.config.ts
test/tests/: 01-fresh-start.spec.ts  02-watchlist.spec.ts  03-buy.spec.ts  04-sell.spec.ts  (+4 more)
(+1 files in other folders)
